# pyngb

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  IMPROVEMENT_PLAN.md  README.md  ROADMAP.md  TESTING_OVERVIEW.md  TEST_SUMMARY.md  add_type_ignores.py  benchmarks.py  debug_mfc.py  final_type_fixes.py  fix_all_remaining.py  fix_polars_indexing.py  fix_polars_precise.py  fix_remaining_types.py  fix_test_types.py  mkdocs.yml  pyproject.toml  run_tests.py  test_column_rename.py  zensical.toml
docs/: _headers  api-reference.md  api.md  api.rst  architecture.md  binary-format.md  conf.py  contributing.md  development.md  development.rst  getting-started.md  index.md  index.rst  installation.md  installation.rst  quickstart.md  quickstart.rst  robots.txt  troubleshooting.md  user-guide.md
examples/: README.md  baseline_subtraction_demo.py  basic_parsing.py  batch_processing.py  batch_processing_example.py  cli_baseline_examples.sh
output/: DF_FILED_STA_21O2_10K_220222_R1.parquet  RO_FILED_STA_N2_10K_250129_R29.parquet  Red_Oak_STA_10K_250731_R7.parquet
overrides/: main.html
scripts/: README.md  diff_old_new.py  discover_patterns.py  dump_masses.py  make_goldens.py  ngb_deep_inspect.py  run_tests.py
tests/: README.md  conftest.py  test_adaptive_parameters.py  test_api.py  test_api_analysis.py  test_application_license.py  test_baseline.py  test_batch.py  test_binary_handlers.py  test_binary_parser.py  test_channel_attribution.py  test_channels.py  test_cli.py  test_cli_baseline.py  test_cli_execution.py  test_cli_inspect.py  test_cli_metadata.py  test_cli_validate.py  test_column_metadata.py  test_constants.py  test_container.py  test_corruption.py  test_crucible_fallback.py  test_document.py  test_dsc_calibration.py  test_dtg.py  test_exceptions.py  test_extract.py  (+21 more)
(+102 files in other folders)
