[project]
name = "pynetzsch"
version = "0.0.1"
description = "Python package for retrieving data from Netzsch STA files."
readme = "README.md"
authors = [
    { name = "Grayson Bellamy", email = "gbellamy@umd.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "polars",
    "pyarrow",
    "numpy",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov",
    "pytest-mock",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov", 
    "pytest-mock",
    "black",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py", 
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
